refactor: fetch movie details and save poster async way

--- a/web/index.html
+++ b/web/index.html
@@ -52,7 +52,7 @@
 
                                     <div class="input-group p-2">
                                         <div class="input-group-prepend">
-                                            <button class="btn btn-sm text-white bg-blue" id="browse_btn" onclick="browse_movie_folder(event);">
+                                            <button class="btn btn-sm text-white bg-blue" id="browse_btn" onclick="browse_movie_directory(event);">
                                               <i class="fa fa-folder-open"></i>&nbsp;<b>Browse</b>
                                             </button>
                                         </div>
